# capturadora1

./: .env.example  .gitignore  Dockerfile  MANUAL_USUARIO.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  roadmap-ocr-tributario-chileno.md  stack_ocr_chile_fastapi.md
.github/workflows/: tests.yml
config/: settings.yaml
db/: jobs.db
docs/propuesta_rediseño_ui/: analisis_flujo_ui.md  evaluacion_software.md  pipeline_desarrollo.md  propuesta_mejoramiento_ui.md  task.md  walkthrough.md  wireframe_salida.md  wireframe_ux.md
documentos_ingresados/: .gitkeep
frontend/: app.css  app.js  index.html
output/: .gitkeep
quarantine/: .gitkeep
scripts/: env_helper.ps1  eval_documentos.py  export_results.py  generate_predeploy_report.py  protect_main.json  run_api.ps1  run_batch.ps1  run_redis.ps1  run_worker.ps1
src/ocr_tributario/: __init__.py  __main__.py
src/ocr_tributario.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ocr_tributario/api/: __init__.py  main.py  schemas.py
src/ocr_tributario/config/: loader.py  schema.py  templates.yaml
src/ocr_tributario/db/: __init__.py
src/ocr_tributario/exporters/: csv_writer.py  excel_writer.py
src/ocr_tributario/extractors/: anchors.py  image_fallback.py  ocr_tesseract.py  pdf_native.py
src/ocr_tributario/ingestion/: router.py  scanner.py
src/ocr_tributario/models/: cedula.py  invoice.py
src/ocr_tributario/orchestrator/: hitl.py  pipeline.py
src/ocr_tributario/schemas/: ocr.py  (+1 more)
tests/: test_api.py  test_hsv_segmenter.py  test_regex_patterns.py  test_rut_validator.py  test_smoke.py
(+21 files in other folders)
